--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Název stránky
-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-keywords: Lorem ipsum, dolor sit amet, consectetur adipiscing, elit, sed do
+title: Jiri Stepanek
+description: My name is Jiri Stepanek and I’m 18 years old. Although I still haven't finished high school, I run a small agency called PalmMedia. I personally specialize in social media marketing and web development. I spent most of my time working for clients, in the GYM or just playing with my cat.
+keywords: StyvekDrtic, Jiri Stepanek, Jirka, Juraj, webdev, social media, palmmedia, lanistae, arkun, gevo, Audiožurnál
 author: palmmedia.co
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://palmmedia.co" # the base hostname & protocol for your site
+url: "http://jiristepanek.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
